# AUROS

./: CMakeLists.txt  README.md  installGeneral  package.xml
audio_features_classification/: CMakeLists.txt  README.md  package.xml
audio_features_classification/config/: parameters.yaml  parameters.yaml~
audio_features_classification/launch/: classifier.launch  generate_class.launch  train.launch  viz.launch
audio_features_classification/msg/: classificationResult.msg
audio_features_classification/scripts/: class_generator.py  classifier.py  giannis.py  temp.py  train.py  visualize.py
audio_features_classification/scripts/classifier_data/: activity.npy  keys.npy  modelSVM  modelSVMMEANS  music.npy  musicss.npy  silence.npy  speech.npy
audio_features_extraction/: CMakeLists.txt  README.md  package.xml
audio_features_extraction/config/: parameters.yaml
audio_features_extraction/include/: mel_filterbank.hpp  mfcc_extraction.hpp  window.hpp
audio_features_extraction/launch/: extract.launch
audio_features_extraction/msg/: featMsg.msg
audio_features_extraction/src/: audio_pimp.cpp  audio_pimp.hpp  main.cpp  mfcc.cpp  processor.hpp  short_term_feature.hpp  stft.cpp  window.cpp
audio_features_msgs/: CMakeLists.txt  package.xml
config/: parameters.yaml  parameters.yaml~
launch/: paexample.launch
metaClassifier/: evaluate.py
scripts/: features_subscriber.py
src/: main.cpp  mel_filterbank.cpp  mfcc.hpp  stft.hpp
